# gpu-observer-hyprland

./: Cargo.toml  README.md
src/: app.rs  history.rs  main.rs  metrics.rs
src/collector/: cpu.rs  gpu.rs  memory.rs
src/ui/: cpu_panel.rs  gpu_panel.rs  mem_panel.rs  mod.rs  process_panel.rs  theme.rs  widgets.rs
