[package]
name = "gpu-observer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gpu-observer"
path = "src/main.rs"

[dependencies]
ratatui      = { version = "0.29", features = ["crossterm"] }
crossterm    = "0.28"
tui-big-text = "0.7"
nvml-wrapper = "0.10"
sysinfo      = "0.32"
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
anyhow       = "1"
parking_lot  = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
